[package]
name = "miden-dark-pool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "matcher"
path = "src/matcher.rs"

[[bin]]
name = "user"
path = "src/user.rs"

[lib]
name = "miden_dark_pool"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
winter-utils = "0.12.0"
miden-vm = "0.13.2"
miden-objects = { version = "0.8.1"}
miden-lib = { version = "0.8.0"}
miden-tx = { version = "0.8.1", features = ["testing"] }
miden-crypto = "=0.7.1"
miden-client = { version = "0.8.1", features = ["testing", "concurrent", "tonic", "sqlite"] }
sha2 = "0.10.8"
rand = { version = "0.9" }
clap = { version = "4", features = ["derive"] }
thiserror = "2.0.12"